# rnnoise

./: meson.build  relocatedev
pkgconfig/windows/: rnnoise.pc
plugin/: meson.build
plugin/src/: gstrnnoise.c  rndenoise.c  rndenoise.h  rndenoiser.c  rndenoiser.h
rnnoise/silicon/lib/: librnnoise.0.dylib
rnnoise/windows/include/: rnnoise.h
rnnoise/windows/lib/: rnnoise.lib
